app/assets/stylesheets/custom.css
.cat {
  background-color: #60b524;
  padding: 10px;
}

.icon-div {
  height: 80px;
  width: 80px;
  border: 1px solid #ccc;
}

.icon-div img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.bi {
  color: #ffff;
}

.colar {
  background-color: #ffff;
}

.logo {
  height: 350px;
  width: 200px;
}

.logo img {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.buc1 {
  background-color: #336eb2;
}

.buc2 {
  background-color: #fff;
}

.tx {
  color: #434c55;
}

.container {
  background-color: #336eb2;
}

.cat,
.container {
  height: 80px;
}

.pad-r {
  padding-right: 20px;
}

